# general-life-tasks

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  config.py  docker-compose.yml  index.py  llm_client.py  main.py  models.py  order_categorizer.py  order_database.db  order_matcher.py  pyproject.toml  schema.sql  youtube_models.py
clients/: llm_client.py  mistral_client.py  ynab_client.py  youtube_client.py
config/: __init__.py  db.py  settings.py
models/: BaseResource.py  TaskQueue.py  Youtube.py  __init__.py  bugdet.py  order_models.py  pickeball.py  youtube_models.py
repositories/: __init__.py  channel_repo.py  video_repo.py
services/: __init__.py  order_categorizer.py  order_matcher.py  resource_service.py  transaction_service.py  youtube_service.py
utils/: job_management.py
