[project]
name = "general-life-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb==1.3.2",
    "loguru==0.7.3",
    "mistralai==1.9.10",
    "polars==1.33.0",
    "prometheus-client>=0.22.1",
    "pydantic==2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "ynab>=1.8.0",
]
